More Ritmyndir categories added; defensive programming for new categories

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4446,8 +4446,9 @@ $include Storasnid_ritm.csv
 # for other information
 # "Ritmyndir error code" : ("ritregla/spelling rule", "category", "other detail" ) }
 # Other detail can contain {} for fstring insertion - values are {original} and {correct}
-"1ORD42": "2.4.1", "Stafsetningarvilla", "Rétt er að rita {original} sem tvö orð, svo: '{correct}'"
-"2ORD41": "2.1.2", "Stafsetningarvilla", "Rétt er að rita {original} sem eitt orð, svo: '{correct}'"
+"04I-ÞGF": "", "Beygingarvilla", "Rétt er að hafa -i- í þágufalli eintölu '{lemma}', svo: '{correct}'."
+"1ORD42": "2.4.1", "Stafsetningarvilla", "Rétt er að rita {original} sem tvö orð, svo: '{correct}'."
+"2ORD41": "2.1.2", "Stafsetningarvilla", "Rétt er að rita {original} sem eitt orð, svo: '{correct}'."
 "ANDA4ENDA": "", "Beygingarvilla", "Eignarfall fleirtölu orða sem enda á -andi er -enda, ekki -anda."
 "AR-EFGR": "", "Beygingarvilla", "Eignarfallsending '{original}' á að vera svo: '{correct}'."
 "ARI4NI": "", "Beygingarvilla", "Lýsingarorðið '{lemma}' fær í miðstigi endinguna -ni/-na, svo: '{correct}'."
@@ -4517,6 +4518,8 @@ $include Storasnid_ritm.csv
 "KVK4KK": "", "Beygingarvilla", "Orðið '{lemma}' er karlkynsnafnorð svo orðmyndin '{original}' ætti að ritast '{correct}'."
 "LAG4HA": "1.2.2", "Stafsetningarvilla", "Rétt er að rita '{original}' með stórum staf, svo: '{correct}'."
 "LG4GL": "8.3, 20", "Stafsetningarvilla", "Rita ætti 'lg' í stað 'gl' í '{original}', svo: '{correct}'."
+"LL4L": "18", "Stafsetningarvilla", "Rita ætti 'l' í stað 'll' í '{original}', svo: '{correct}'."
+"L4LL": "18", "Stafsetningarvilla", "Rita ætti 'll' í stað 'l' í '{original}', svo: '{correct}'."
 "LLJ4LJ": "18", "Stafsetningarvilla", "Rita ætti 'lj' í stað 'llj' í '{original}', svo: '{correct}'."
 "LLST4LST": "18", "Stafsetningarvilla", "Rita ætti 'lst' í stað 'llst' í '{original}', svo: '{correct}'."
 "LLT4LT": "18", "Stafsetningarvilla", "Rita ætti 'lt' í stað 'llt' í '{original}', svo: '{correct}'."
@@ -4531,6 +4534,7 @@ $include Storasnid_ritm.csv
 "N4NN-ORD": "18", "Stafsetningarvilla", "Rita ætti 'nn' í stað 'n' í '{original}', svo: '{correct}'."
 "N4NN-SAM": "", "Stafsetningarvilla", "Rita ætti 'nn' í stað 'n' í '{original}', svo: '{correct}'."
 "NG4GN": "8.3, 20", "Stafsetningarvilla", "Rita ætti 'gn' í stað 'ng' í '{original}', svo: '{correct}'."
+"NGLS4NGSL": "20", "Stafsetningarvilla", "Rita ætti 'ngsl' í stað 'ngls' í '{original}', svo: '{correct}'."
 "NGNK": "4.2", "Stafsetningarvilla", "Ekki skal rita 'á/ei/í/ý/ú/au' á undan 'ng/nk' í orðinu '{original}', svo: '{correct}'."
 "NN4N-END": "12", "Stafsetningarvilla", "Rita ætti 'n' í stað 'nn' í lok orðsins '{original}', svo: '{correct}'."
 "NN4N-ORD": "18", "Stafsetningarvilla", "Rita ætti 'n' í stað 'nn' í '{original}', svo: '{correct}'."
@@ -4572,6 +4576,7 @@ $include Storasnid_ritm.csv
 "TTN4TN": "18", "Stafsetningarvilla", "Rita ætti 'tn' í stað 'ttn' í '{original}', svo: '{correct}'."
 "U4Y": "", "Stafsetningarvilla", "Rita ætti 'y' í '{original}' þó að framburður sé oft 'u', svo: '{correct}'."
 "U4Ú": "", "Stafsetningarvilla", "Rita ætti 'ú' í stað 'u' í '{original}', svo: '{correct}'."
+"URE": "", "Orðavalsvilla", "Orðið '{original}' telst úrelt."
 "V4F": "7.1-7.3.5", "Stafsetningarvilla", "Rita ætti 'f' í stað 'v' í '{original}', svo: '{correct}'."
 "VANTAR-J-FT": "", "Beygingarvilla", "Rita ætti 'j' í fleirtölu '{lemma}', svo: '{correct}'."
 "Y4I": "6.2.1, 6.3, 6.4", "Stafsetningarvilla", "Rita ætti 'i' í stað 'y' í '{original}', svo: '{correct}'."
