--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4452,6 +4452,7 @@ $include Storasnid_ritm.csv
 "ANDA4ENDA": "", "Beygingarvilla", "Eignarfall fleirtölu orða sem enda á -andi er -enda, ekki -anda."
 "AR-EFGR": "", "Beygingarvilla", "Eignarfallsending '{original}' á að vera svo: '{correct}'."
 "ARI4NI": "", "Beygingarvilla", "Lýsingarorðið '{lemma}' fær í miðstigi endinguna -ni/-na, svo: '{correct}'."
+"ARI4RI-MST": "", "Beygingarvilla", "Lýsingarorðið '{lemma}' fær í miðstigi endinguna -ri en ekki -ari, svo: '{correct}'."
 "ASLAUKABRODD": "", "Ásláttarvilla", "Broddi er ofaukið á sérhljóða."
 "ASLAUKASTAF": "", "Ásláttarvilla", "Aukastafur var sleginn inn."
 "ASLBRODDVANTAR": "", "Ásláttarvilla", "Brodd vantar á sérhljóða."
@@ -4473,6 +4474,7 @@ $include Storasnid_ritm.csv
 "DN4NN": "16.2", "Stafsetningarvilla", "Þó að d-hljóð heyrist í framburðinum birtist það ekki í stafsetningu orðsins '{original}', heldur á það að vera '{correct}'."
 "DR4INN-LO": "", "Beygingarvilla", "Lýsingarorðið '{original}' ætti að beygjast svo: '{correct}'."
 "E4EI": "5", "Stafsetningarvilla", "Rita ætti 'ei' í stað 'e' í '{original}', svo: '{correct}'."
+"E4É": "3.2, 4.2", "Stafsetningarvilla", "Rita ætti 'é' í stað 'e' í '{original}', svo: '{correct}'."
 "EBEYG": "", "Beygingarvilla", "Beygingarmyndin '{original}' er eldri, ákjósanlegra er að rita '{correct}'"
 "EFINGU": "", "Beygingarvilla", "Eignarfallsending kvenkynsorða sem enda á -ing eiga að vera -u/-unnar."
 "EI4E": "5", "Stafsetningarvilla", "Rita ætti 'e' í stað 'ei' í '{original}', svo: '{correct}'."
