--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4447,10 +4447,11 @@ $include Storasnid_ritm.csv
 # "Ritmyndir error code" : ("ritregla/spelling rule", "category", "other detail" ) }
 # Other detail can contain {} for fstring insertion - values are {original} and {correct}
 "04I-ÞGF": "", "Beygingarvilla", "Rétt er að hafa -i- í þágufalli eintölu '{lemma}', svo: '{correct}'."
-"1ORD42": "2.4.1", "Stafsetningarvilla", "Rétt er að rita {original} sem tvö orð, svo: '{correct}'."
-"2ORD41": "2.1.2", "Stafsetningarvilla", "Rétt er að rita {original} sem eitt orð, svo: '{correct}'."
+"1ORD42": "2.4.1", "Stafsetningarvilla", "Rétt er að rita '{original}' sem tvö orð, svo: '{correct}'."
+"2ORD41": "2.1.2", "Stafsetningarvilla", "Rétt er að rita '{original}' sem eitt orð, svo: '{correct}'."
 "ANDA4ENDA": "", "Beygingarvilla", "Eignarfall fleirtölu orða sem enda á -andi er -enda, ekki -anda."
 "AR-EFGR": "", "Beygingarvilla", "Eignarfallsending '{original}' á að vera svo: '{correct}'."
+"AR4S-EF": "", "Beygingarvilla", "Eignarfallsending er -(j)ar í karlkynsnafnorðum sem venjulega hafa eignarfallsendinguna -s (-arins fyrir -sins með greini), svo: '{correct}'."
 "ARI4NI": "", "Beygingarvilla", "Lýsingarorðið '{lemma}' fær í miðstigi endinguna -ni/-na, svo: '{correct}'."
 "ARI4RI-MST": "", "Beygingarvilla", "Lýsingarorðið '{lemma}' fær í miðstigi endinguna -ri en ekki -ari, svo: '{correct}'."
 "ASLAUKABRODD": "", "Ásláttarvilla", "Broddi er ofaukið á sérhljóða."
@@ -4490,6 +4491,7 @@ $include Storasnid_ritm.csv
 "G4J": "8", "Stafsetningarvilla", "Rita ætti 'j' í stað 'g' í '{original}', svo: '{correct}'."
 "G4K": "", "Stafsetningarvilla", "Rita ætti 'k' í stað 'g' í '{original}', svo: '{correct}'."
 "GGÐ4GÐ": "18", "Stafsetningarvilla", "Rita ætti 'gð' í stað 'ggð' í '{original}', svo: '{correct}'."
+"GGST4GST": "18", "Stafsetningarvilla", "Rita ætti 'gst' í stað 'ggst' í '{original}', svo: '{correct}'."
 "GL4GGL": "18", "Stafsetningarvilla", "Rita ætti 'ggl' í stað 'gl' í '{original}', svo: '{correct}'."
 "GMVILLA": "", "Beygingarvilla", "Sögnin '{lemma}' er venjulega aðeins höfð í miðmynd."
 "GN4GGN": "18", "Stafsetningarvilla", "Rita ætti 'ggn' í stað 'gn' í '{original}', svo: '{correct}'."
@@ -4519,7 +4521,8 @@ $include Storasnid_ritm.csv
 "KVK4HK": "", "Beygingarvilla", "Orðið '{lemma}' er hvorugkynsnafnorð svo orðmyndin '{original}' ætti að ritast '{correct}'."
 "KVK4KK": "", "Beygingarvilla", "Orðið '{lemma}' er karlkynsnafnorð svo orðmyndin '{original}' ætti að ritast '{correct}'."
 "LAG4HA": "1.2.2", "Stafsetningarvilla", "Rétt er að rita '{original}' með stórum staf, svo: '{correct}'."
-"LG4GL": "8.3, 20", "Stafsetningarvilla", "Rita ætti 'lg' í stað 'gl' í '{original}', svo: '{correct}'."
+"LG4GL": "8.3, 20", "Stafsetningarvilla", "Rita ætti 'gl' í stað 'lg' í '{original}', svo: '{correct}'."
+"LF4FL": "20", "Stafsetningarvilla", "Rita ætti 'fl' í stað 'lf' í '{original}', svo: '{correct}'."
 "LL4L": "18", "Stafsetningarvilla", "Rita ætti 'l' í stað 'll' í '{original}', svo: '{correct}'."
 "L4LL": "18", "Stafsetningarvilla", "Rita ætti 'll' í stað 'l' í '{original}', svo: '{correct}'."
 "LLJ4LJ": "18", "Stafsetningarvilla", "Rita ætti 'lj' í stað 'llj' í '{original}', svo: '{correct}'."
@@ -4532,6 +4535,7 @@ $include Storasnid_ritm.csv
 "M4MM": "11", "Stafsetningarvilla", "Rita ætti 'mm' í stað 'm' í '{original}', svo: '{correct}'."
 "MIÐSTIGV": "", "Beygingarvilla", "Ritmynd er beygingarmynd í miðstigi af lýsingarorði sem venjulega stigbreytist ekki eða er venjulega ekki haft í miðstigi"
 "MM4M": "11", "Stafsetningarvilla", "Rita ætti 'm' í stað 'mm' í '{original}', svo: '{correct}'."
+"NA4A-EFFT": "", "Beygingarvilla", "Rita ætti '-a' í eignarfallsendingu fleirtölu kvenkynsnafnorða eins og '{original}', svo: '{correct}'."
 "N4NN-END": "12", "Stafsetningarvilla", "Rita ætti 'nn' í stað 'n' í lok orðsins '{original}', svo: '{correct}'."
 "N4NN-ORD": "18", "Stafsetningarvilla", "Rita ætti 'nn' í stað 'n' í '{original}', svo: '{correct}'."
 "N4NN-SAM": "", "Stafsetningarvilla", "Rita ætti 'nn' í stað 'n' í '{original}', svo: '{correct}'."
@@ -4578,7 +4582,7 @@ $include Storasnid_ritm.csv
 "TTN4TN": "18", "Stafsetningarvilla", "Rita ætti 'tn' í stað 'ttn' í '{original}', svo: '{correct}'."
 "U4Y": "", "Stafsetningarvilla", "Rita ætti 'y' í '{original}' þó að framburður sé oft 'u', svo: '{correct}'."
 "U4Ú": "", "Stafsetningarvilla", "Rita ætti 'ú' í stað 'u' í '{original}', svo: '{correct}'."
-"URE": "", "Orðavalsvilla", "Orðið '{original}' telst úrelt."
+"URE": "", "Orðavalsvilla", "Orðið '{original}' kemur tæplega fyrir í nútímamáli."
 "V4F": "7.1-7.3.5", "Stafsetningarvilla", "Rita ætti 'f' í stað 'v' í '{original}', svo: '{correct}'."
 "VANTAR-J-FT": "", "Beygingarvilla", "Rita ætti 'j' í fleirtölu '{lemma}', svo: '{correct}'."
 "Y4I": "6.2.1, 6.3, 6.4", "Stafsetningarvilla", "Rita ætti 'i' í stað 'y' í '{original}', svo: '{correct}'."
@@ -4586,6 +4590,7 @@ $include Storasnid_ritm.csv
 "É4JE": "3.3.2", "Stafsetningarvilla", "Rita ætti 'je' í stað 'é' í '{original}', svo: '{correct}'."
 "Í4I": "", "Stafsetningarvilla", "Rita ætti 'i' í stað 'í' í '{original}', svo: '{correct}'."
 "Í4Ý": "6.2.2, 6.4", "Stafsetningarvilla", "Rita ætti 'ý' í stað 'í' í '{original}', svo: '{correct}'."
+"Ó4O": "", "Stafsetningarvilla", "Rita ætti 'o' í stað 'ó' í '{original}', svo: '{correct}'."
 "Ý4Y": "", "Stafsetningarvilla", "Rita ætti 'y' í stað 'ý' í '{original}', svo: '{correct}'."
 "Ý4Í": "6.2.2, 6.4", "Stafsetningarvilla", "Rita ætti 'í' í stað 'ý' í '{original}', svo: '{correct}'."
 "VILLA": "", "Stafsetningarvilla", "Rita ætti '{correct}' í stað '{original}'."
