í takt við removed as an error, not founded on standards

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4819,7 +4819,7 @@ við líði                    	$error(IIYY, við lýði)
 í mestu kviðunum				$error(HVKV, í mestu hviðunum)
 í rénum                     	$error(WRONG_WORD, í rénun)
 í staðin                    	$error(WRONG_WORD, í staðinn)
-í takt við                  	$error(WRONG_CASE, í takti við)
+#í takt við                  	$error(WRONG_CASE, í takti við) # not explicitly an error
 í tilefni að                    $error(AÐAF, í tilefni af)
 í því skini						$error(IY, í því skyni)
 ítrustu varúðar             	$error(IIYY, ýtrustu varúðar)
