Type checker fixes; formatting; added 'arfleið' to unique errors

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -204,6 +204,8 @@
 "áratugs", "áratugar"
 "áratugsins", "áratugarins"
 "árð", "árið"
+"arfleið", "arfleifð"
+"arfleiðar", "arfleifðar"
 "Argentísk", "Argentínsk"
 "argentíska", "argentínska"
 "argentíski", "argentínski"
