Blacked, rm unused import, run CI on all branches

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,9 +2,11 @@ name: tests
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - '*' # Run on all branches
   pull_request:
-    branches: [ master ]
+    branches:
+      - '*' # Run on all branches
 
 jobs:
   build:
