setup tone of voice functionality, handling of list of words to flag, capitalization

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4427,6 +4427,19 @@ Vistfræðikenning
 Þjóðfræði
 Þrælastríð
 
+# Finance capitalization errors
+Þjónustuver
+Fyrirtækjaþjónusta
+Fyrirtækjaráðgjöf
+Innheimtuþjónusta
+Netbanki
+Heimabanki
+Hraðbanki
+Vefsíða
+Heimasíða
+Valgreiðsla
+App
+
 # The tsv file is retrieved from http://hdl.handle.net/20.500.12537/63
 # and needs to be in the config folder.
 [iec_nonwords]
@@ -4668,7 +4681,7 @@ að öllu afli                	$error(AÐAF, af öllu afli)
 að því tilefni              	$error(AÐAF, af því tilefni)
 að því tilskyldu            	$error(YI, að því tilskildu)
 beggja megin                	$error(WRONG_WORD, báðum megin) # eða beggja vegna
-björn í híði					$error(IIYY, björn í hýði)
+björn í hýði					$error(IIYY, björn í híði)
 blöðum um það að flétta         $error(WRONG_WORD, blöðum um það að fletta)
 burtséð frá                 	$error(WRONG_PHRASE, að undanskildu)  # eða án tillits til
 bæn sýna uppfyllta				$error(YYII, bæn sína uppfyllta)
@@ -4843,3 +4856,7 @@ að sjálfu sér 					$error(AÐAF, af sjálfu sér)
 # Include WrongWords.conf file
 
 $include WrongWords.conf
+
+[finance_words]
+
+$include FinanceWords.conf
