some frosen multiword phrases added

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4433,12 +4433,16 @@ Fyrirtækjaþjónusta
 Fyrirtækjaráðgjöf
 Innheimtuþjónusta
 Netbanki
+Netfang
 Heimabanki
 Hraðbanki
 Vefsíða
+Netsíða
 Heimasíða
 Valgreiðsla
 App
+Debetkort
+Kreditkort
 
 # The tsv file is retrieved from http://hdl.handle.net/20.500.12537/63
 # and needs to be in the config folder.
@@ -4853,6 +4857,9 @@ við líði                    	$error(IIYY, við lýði)
 að sjálfu sér 					$error(AÐAF, af sjálfu sér)
 þar að leiðandi					$error(AÐAF, þar af leiðandi)
 
+# multiword additions
+$include FinanceMultiwords.conf
+
 # Include WrongWords.conf file
 
 $include WrongWords.conf
@@ -4860,3 +4867,4 @@ $include WrongWords.conf
 [finance_words]
 
 $include FinanceWords.conf
+
