--- a/src/reynir_correct/config/FinanceWords.conf
+++ b/src/reynir_correct/config/FinanceWords.conf
@@ -15,7 +15,7 @@
 # Note that lines can be continued by ending them with a backslash '\',
 # which is especially useful for long explanatory comments.
 
-redda_so bjarga_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda.\ATH: kk nafnorðið 'reddi' er í BÍN sem ruglar vinnsluna (og kvk Redda)."
+redda_so bjarga_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda."
 
 fixa_so leysa_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda"
 
@@ -27,7 +27,7 @@ fjárhæð_kvk upphæð_kvk
 
 húsnæðislánaráðgjafi_kk sérfræðingur_kk
 
-dreifileið_kvk_w netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk
+dreifileið_kvk netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk
 
 lánsfjárhæð_kvk lánsupphæð_kvk
 
@@ -41,8 +41,8 @@ heimabanki_kk netbanki_kk
 
 heimasíða_kvk vefsíða_kvk
 
-innlán_hk_w sparnaður_kk
+innlán_hk sparnaður_kk
 
 útlán_hk lánsupphæð_kvk
 
-tölvupóstur_kk_w netfang_hk "Notaðu netfang ef þú ert að tala um tölvupóstfangið sjálft"
+tölvupóstur_kk_w netfang_hk "Notaðu „netfang“ ef þú ert að tala um tölvupóstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
