--- a/src/reynir_correct/config/ExtraWords.conf
+++ b/src/reynir_correct/config/ExtraWords.conf
@@ -39,8 +39,6 @@ Fyrirtækjabanki
 
 [ritmyndir_details]
 
-[taboo_words]
-
 [suggestions]
 
 [multiword_errors]
@@ -51,36 +49,37 @@ hafðu samband við ráðgjafa              $error(WRONG_PHRASE, sendu fyrirspur
 hafa samband við ráðgjafa               $error(WRONG_PHRASE, senda fyrirspurn)
 takk kærlega fyrir                      $error(WRONG_PHRASE, takk fyrir)
 
-[extra_words]
+#tone_of_voice_words
+#[extra_words]
 
-redda_so bjarga_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda."
+#redda_so bjarga_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda."
 
-fixa_so leysa_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda"
+#fixa_so leysa_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda"
 
-bankareikningur_kk reikningur_kk
+#bankareikningur_kk reikningur_kk
 
-debitkort_hk debetkort_hk
+#debitkort_hk debetkort_hk
 
-fjárhæð_kvk upphæð_kvk
+#fjárhæð_kvk upphæð_kvk
+#
+#húsnæðislánaráðgjafi_kk sérfræðingur_kk
 
-húsnæðislánaráðgjafi_kk sérfræðingur_kk
+#dreifileið_kvk netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
 
-dreifileið_kvk netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
+#lánsfjárhæð_kvk lánsupphæð_kvk
 
-lánsfjárhæð_kvk lánsupphæð_kvk
+#tölvupóstfang_hk netfang_hk
 
-tölvupóstfang_hk netfang_hk
+#netpóstur_kk netfang_hk
 
-netpóstur_kk netfang_hk
+#þjónustuver_hk ráðgjafaver_hk
 
-þjónustuver_hk ráðgjafaver_hk
+#heimabanki_kk netbanki_kk
 
-heimabanki_kk netbanki_kk
+#heimasíða_kvk vefsíða_kvk
 
-heimasíða_kvk vefsíða_kvk
+#innlán_hk sparnaður_kk
 
-innlán_hk sparnaður_kk
-
-útlán_hk lán_hk
+#útlán_hk lán_hk
 
 #tölvupóstur_kk_w netfang_hk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
