--- a/src/reynir_correct/config/ExtraWords.conf
+++ b/src/reynir_correct/config/ExtraWords.conf
@@ -49,37 +49,36 @@ hafðu samband við ráðgjafa              $error(WRONG_PHRASE, sendu fyrirspur
 hafa samband við ráðgjafa               $error(WRONG_PHRASE, senda fyrirspurn)
 takk kærlega fyrir                      $error(WRONG_PHRASE, takk fyrir)
 
-#tone_of_voice_words
-#[extra_words]
+[tone_of_voice_words]
 
-#redda_so bjarga_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda."
+redda_so bjarga_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda."
 
-#fixa_so leysa_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda"
+fixa_so leysa_so "Leysa úr eða bjarga málunum frekar en að fixa eða redda"
 
-#bankareikningur_kk reikningur_kk
+bankareikningur_kk reikningur_kk
 
-#debitkort_hk debetkort_hk
+debitkort_hk debetkort_hk
 
-#fjárhæð_kvk upphæð_kvk
-#
-#húsnæðislánaráðgjafi_kk sérfræðingur_kk
+fjárhæð_kvk upphæð_kvk
 
-#dreifileið_kvk netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
+húsnæðislánaráðgjafi_kk sérfræðingur_kk
 
-#lánsfjárhæð_kvk lánsupphæð_kvk
+dreifileið_kvk netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
 
-#tölvupóstfang_hk netfang_hk
+lánsfjárhæð_kvk lánsupphæð_kvk
 
-#netpóstur_kk netfang_hk
+tölvupóstfang_hk netfang_hk
 
-#þjónustuver_hk ráðgjafaver_hk
+netpóstur_kk netfang_hk
 
-#heimabanki_kk netbanki_kk
+þjónustuver_hk ráðgjafaver_hk
 
-#heimasíða_kvk vefsíða_kvk
+heimabanki_kk netbanki_kk
 
-#innlán_hk sparnaður_kk
+heimasíða_kvk vefsíða_kvk
 
-#útlán_hk lán_hk
+innlán_hk sparnaður_kk
 
-#tölvupóstur_kk_w netfang_hk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
+útlán_hk lán_hk
+
+tölvupóstur_kk_w netfang_hk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
