--- a/src/reynir_correct/config/ExtraWords.conf
+++ b/src/reynir_correct/config/ExtraWords.conf
@@ -63,7 +63,7 @@ fjárhæð_kvk upphæð_kvk
 
 húsnæðislánaráðgjafi_kk sérfræðingur_kk
 
-dreifileið_kvk netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
+dreifileið_kvk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
 
 lánsfjárhæð_kvk lánsupphæð_kvk
 
@@ -81,4 +81,4 @@ innlán_hk sparnaður_kk
 
 útlán_hk lán_hk
 
-tölvupóstur_kk_w netfang_hk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
+tölvupóstur_kk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
