suggest_not_correct applied to check_wording

--- a/src/reynir_correct/config/ExtraWords.conf
+++ b/src/reynir_correct/config/ExtraWords.conf
@@ -81,4 +81,4 @@ innlán_hk sparnaður_kk
 
 útlán_hk lán_hk
 
-tölvupóstur_kk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
+tölvupóstur_kk netfang_hk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
