added to split compounds and more

--- a/src/reynir_correct/config/ExtraWords.conf
+++ b/src/reynir_correct/config/ExtraWords.conf
@@ -2,13 +2,14 @@
 
 [unique_errors]
 
-[allowed_multiples]
-
 [wrong_compounds]
 
 [split_compounds]
 
-Íslandsbanka app
+íslandsbanka app
+innheimtu þjónusta
+fyrirtækja þjónusta
+fyrirtækja ráðgjöf
 
 [morphemes]
 
@@ -30,14 +31,6 @@ App
 Debetkort
 Kreditkort
 Fyrirtækjabanki
-
-[iec_nonwords]
-
-[icesquer]
-
-[ritmyndir]
-
-[ritmyndir_details]
 
 [suggestions]
 
@@ -63,7 +56,7 @@ fjárhæð_kvk upphæð_kvk
 
 húsnæðislánaráðgjafi_kk sérfræðingur_kk
 
-dreifileið_kvk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
+dreifileið_kvk netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
 
 lánsfjárhæð_kvk lánsupphæð_kvk
 
@@ -81,4 +74,8 @@ innlán_hk sparnaður_kk
 
 útlán_hk lán_hk
 
-tölvupóstur_kk netfang_hk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
+viðskiptavinur_kk þú_fn "Í samskiptum við viðskiptavini reynum við að ávarpa fólk beint."
+
+Íslandsbanki_kk við_fn "Við segjum yfirleitt „við“ í staðinn fyrir „Íslandsbanki“ í samskiptum við viðskiptavini, nema í formlegri textum."
+
+#tölvupóstur_kk netfang_hk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
