testing and additional words to fix

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4844,3 +4844,37 @@ að sjálfu sér 					$error(AÐAF, af sjálfu sér)
 # Include WrongWords.conf file
 $include WrongWords.conf
 
+# Tradition says these word parts should rather be used
+# Using the results in a context-dependent error
+# Attn.: Make sure these errors are available as a prefix
+[wrong_formers]
+"akstur", "aksturs"
+"athugana", "athugunar"
+"ferminga", "fermingar"
+"fjárfestinga", "fjárfestingar"
+"forvarna", "forvarnar"
+"heyrna", "heyrnar"
+"kvartana", "kvörtunar"
+"loftlags", "loftslags"
+"næringa", "næringar"
+"pantana", "pöntunar"
+"ráðninga", "ráðningar"
+"skráninga", "skráningar"
+"Vestfjarðar", "Vestfjarða"
+"ábendinga", "ábendingar"
+
+# Using these word parts results in a context-independent error
+# Attn.: Make sure these errors are available in prefix.txt in BinPackage
+[wrong_formers_ci]
+"Atlandshafs", "Atlantshafs"
+"akríl", "akrýl"
+"dísel", "dísil"
+"eyrnar", "eyrna"
+"feykna", "feikna"
+"fjarskiptar", "fjarskipta"
+"fyrna", "firna"
+"griðar", "griða"  # griðarstaður
+"hönnuna", "hönnunar"
+"kvenn", "kven"
+"Lundúnar", "Lundúna"
+"öldungar", "öldunga"
