--- a/src/reynir_correct/config/ExtraWords.conf
+++ b/src/reynir_correct/config/ExtraWords.conf
@@ -34,6 +34,7 @@ Fyrirtækjabanki
 
 [suggestions]
 
+
 [multiword_errors]
 
 # A list of multiword errors related to the financial sector 
@@ -56,6 +57,8 @@ fjárhæð_kvk upphæð_kvk
 
 húsnæðislánaráðgjafi_kk sérfræðingur_kk
 
+þjónustufulltrúi_kk ráðgjafi_kk
+
 dreifileið_kvk netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
 
 lánsfjárhæð_kvk lánsupphæð_kvk
@@ -74,8 +77,19 @@ innlán_hk sparnaður_kk
 
 útlán_hk lán_hk
 
-viðskiptavinur_kk þú_fn "Í samskiptum við viðskiptavini reynum við að ávarpa fólk beint."
+viðskiptavinur_kk þú_pfn "Í samskiptum við viðskiptavini reynum við að ávarpa fólk beint."
 
-Íslandsbanki_kk við_fn "Við segjum yfirleitt „við“ í staðinn fyrir „Íslandsbanki“ í samskiptum við viðskiptavini, nema í formlegri textum."
+Íslandsbanki_kk við_pfn "Við segjum yfirleitt „við“ í staðinn fyrir „Íslandsbanki“ í samskiptum við viðskiptavini, nema í formlegri textum."
 
 #tölvupóstur_kk netfang_hk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
+
+[wrong_formers]
+
+[wrong_formers_ci]
+
+"debit", "debet"
+"heimabanka", "netbanka"
+"heimasíðu", "vefsíðu"
+"útláns", "láns"
+"innláns", "sparnaðar" # not working
+"bankareiknings", "reiknings"
