changes made for M1

--- a/src/reynir_correct/config/ExtraWords.conf
+++ b/src/reynir_correct/config/ExtraWords.conf
@@ -32,6 +32,7 @@ Debetkort
 Kreditkort
 Fyrirtækjabanki
 
+
 [suggestions]
 
 
@@ -39,8 +40,8 @@ Fyrirtækjabanki
 
 # A list of multiword errors related to the financial sector 
 okkar kæru viðskiptavinir               $error(WRONG_PHRASE, viðskiptavinir okkar)
-hafðu samband við ráðgjafa              $error(WRONG_PHRASE, sendu fyrirspurn)
-hafa samband við ráðgjafa               $error(WRONG_PHRASE, senda fyrirspurn)
+#hafðu samband við ráðgjafa              $error(WRONG_PHRASE, sendu fyrirspurn)
+#hafa samband við ráðgjafa               $error(WRONG_PHRASE, senda fyrirspurn)
 takk kærlega fyrir                      $error(WRONG_PHRASE, takk fyrir)
 
 [tone_of_voice_words]
@@ -57,15 +58,19 @@ fjárhæð_kvk upphæð_kvk
 
 húsnæðislánaráðgjafi_kk sérfræðingur_kk
 
+húsnæðislánafulltrúi_kk sérfræðingur_kk
+
 þjónustufulltrúi_kk ráðgjafi_kk
 
-dreifileið_kvk netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
+dreifileið_kvk samskiptaleið_kvk/netbanki_kk/app_hk/vefsíða_kvk/netspjall_hk "Í samskiptum við viðskiptavini er skýrara að tala um tilteknar leiðir, s.s. netbanka, app, vefsíðu eða netspjall, eftir því sem við á."
+
+vefspjall_hk netspjall_hk
 
 lánsfjárhæð_kvk lánsupphæð_kvk
 
 tölvupóstfang_hk netfang_hk
 
-netpóstur_kk netfang_hk
+netpóstur_kk tölvupóstur_kk/netfang_hk
 
 þjónustuver_hk ráðgjafaver_hk
 
@@ -79,7 +84,7 @@ innlán_hk sparnaður_kk
 
 viðskiptavinur_kk þú_pfn "Í samskiptum við viðskiptavini reynum við að ávarpa fólk beint."
 
-Íslandsbanki_kk við_pfn "Við segjum yfirleitt „við“ í staðinn fyrir „Íslandsbanki“ í samskiptum við viðskiptavini, nema í formlegri textum."
+íslandsbanki_kk við_pfn "Við segjum yfirleitt „við“ í staðinn fyrir „Íslandsbanki“ í samskiptum við viðskiptavini, nema í formlegri textum."
 
 #tölvupóstur_kk netfang_hk "Notaðu „netfang“ yfir póstfangið sjálft, en „tölvupóstur“ ef þú ert að tala um tölvupóstskeytið."
 
