Added cardinals to allowed_multiples in config

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -2735,9 +2735,9 @@
 # Set of word forms that are allowed to appear consecutively in text
 
 á
+átta
 að
 af
-átta
 auður
 bæði
 bannið
@@ -2746,6 +2746,7 @@ efni
 eftir
 eigi
 eigum
+einn
 eins
 er
 fá
@@ -2753,7 +2754,9 @@ falla
 fallið
 ferð
 festi
+fimm
 finnur
+fjórir
 flæði
 flokkar
 formið
@@ -2814,6 +2817,8 @@ næst
 neðan
 niðri
 niður
+níu
+núll
 ó
 ofan
 ómar
@@ -2829,9 +2834,11 @@ sæti
 safnið
 sé
 sem
+sex
 sér
 sett
 síðan
+sjö
 skipið
 skráðir
 sótt
@@ -2846,6 +2853,7 @@ sýna
 talið
 til
 tíma
+tveir
 um
 undan
 undir
@@ -2874,6 +2882,7 @@ yfir
 yrði
 þegar
 þjóna
+þrír
 
 
 [wrong_compounds]
