Allow nom. neuter of cardinals 1-4 in config

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -2748,6 +2748,7 @@ eigi
 eigum
 einn
 eins
+eitt
 er
 fá
 falla
@@ -2757,6 +2758,7 @@ festi
 fimm
 finnur
 fjórir
+fjögur
 flæði
 flokkar
 formið
@@ -2854,6 +2856,7 @@ talið
 til
 tíma
 tveir
+tvö
 um
 undan
 undir
@@ -2883,6 +2886,7 @@ yrði
 þegar
 þjóna
 þrír
+þrjú
 
 
 [wrong_compounds]
