adaptations for additional tov issues

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -911,6 +911,9 @@
 "grata", "gráta"
 "gráturs", "grátur"
 "greiðsluþáttöku", "greiðsluþátttöku"
+"greiðlsukort", "greiðslukort"
+"greiðlsa", "greiðsla"
+"greiðlsu", "greiðslu"
 "greinni", "greininni"
 "greinninni", "greininni"
 "grendinni", "grenndinni"
@@ -1517,6 +1520,7 @@
 "málins", "málsins"
 "málínu", "málinu"
 "mánaðarsins", "mánaðarins"
+"mánaðarmót", "mánaðamót"
 "Managment", "Management"
 "Mangúsar", "Magnúsar"
 "Mangussen", "Magnussen"
