--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "pypy-3.7"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "pypy-3.7"]
 
     steps:
     - uses: actions/checkout@v2
@@ -36,8 +36,8 @@ jobs:
         fi
     - name: Typecheck with mypy
       run: |
-        if [ "${{ matrix.python-version }}" == "3.7" ]; then python -m pip install mypy; fi
-        if [ "${{ matrix.python-version }}" == "3.7" ]; then mypy --ignore-missing-imports --python-version=3.7 src/reynir_correct; fi
+        if [ "${{ matrix.python-version }}" == "3.8" ]; then python -m pip install mypy; fi
+        if [ "${{ matrix.python-version }}" == "3.8" ]; then mypy --ignore-missing-imports --python-version=3.8 src/reynir_correct; fi
     - name: Test with pytest
       run: |
         python -m pytest
