--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,6 @@ line-length = 120
 line-length = 120
 
 [tool.isort]
-known_future_library = ["typing", "typing_extensions"]  # This forces these imports to placed at the top
+known_future_library = ["__future__", "typing", "typing_extensions"]  # This forces these imports to placed at the top
 profile = "black"
 line_length = 120
