Using importlib.metadata to get package version instead of specifying it in two places

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "reynir-correct"
 version = "4.0.0"
 description = "Spelling and grammar correction for Icelandic"
-authors = [{ name = "Miðeind ehf", email = "mideind@mideind.is" }]
+authors = [{ name = "Miðeind ehf.", email = "mideind@mideind.is" }]
 readme = { file = "README.rst", content-type = "text/x-rst" }
 license = { file = "LICENSE.txt" }
 # For classifier list see: https://pypi.org/pypi?%3Aaction=list_classifiers
