--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,8 +26,7 @@ jobs:
     - name: Install GreynirCorrect
       run: |
         python -m pip install --upgrade pip wheel setuptools pytest
-        python -m pip install git+https://github.com/mideind/Tokenizer#egg=tokenizer
-        python -m pip install git+https://github.com/mideind/GreynirPackage#egg=reynir
+        python -m pip install tokenizer reynir
         # No need to test the sentence classifier in every build (also doesn't work with PyPy)
         if [ "${{ matrix.python-version }}" == "3.8" ]; then
           python -m pip install -e ".[sentence_classifier]"
