--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [ "3.8", "3.9", "3.10", "3.11", "3.12", "pypy-3.9", "pypy-3.10"]
+        python-version: [ "3.9", "3.10", "3.11", "3.12", "pypy-3.9", "pypy-3.10"]
 
     steps:
     - uses: actions/checkout@v4
@@ -29,15 +29,15 @@ jobs:
         python -m pip install git+https://github.com/mideind/Tokenizer#egg=tokenizer
         python -m pip install git+https://github.com/mideind/GreynirPackage#egg=reynir
         # No need to test the sentence classifier in every build (also doesn't work with PyPy)
-        if [ "${{ matrix.python-version }}" == "3.8" ]; then
+        if [ "${{ matrix.python-version }}" == "3.9" ]; then
           python -m pip install -e ".[sentence_classifier]"
         else
           python -m pip install -e ".[dev]"
         fi
     - name: Typecheck with mypy
       run: |
-        if [ "${{ matrix.python-version }}" == "3.8" ]; then python -m pip install mypy; fi
-        if [ "${{ matrix.python-version }}" == "3.8" ]; then mypy --ignore-missing-imports --python-version=3.8 src/reynir_correct; fi
+        if [ "${{ matrix.python-version }}" == "3.9" ]; then python -m pip install mypy; fi
+        if [ "${{ matrix.python-version }}" == "3.9" ]; then mypy --ignore-missing-imports --python-version=3.9 src/reynir_correct; fi
     - name: Test with pytest
       run: |
         python -m pytest
