--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ correct = "reynir_correct.main:main"
 where = ["src"]
 
 [tool.setuptools.package-data]
-where = ["src"]
+"reynir_correct" = ["config/*"]
 
 [tool.pytest.ini_options]
 filterwarnings = [
