--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3,7 +3,7 @@
 
 # Configuration settings for the reynir-correct package
 
-# Copyright (C) 2022 Miðeind ehf
+# Copyright © 2025 Miðeind ehf
 
 # This software is licensed under the MIT License:
 
